--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body{
 
 @media (min-width: 480px){
 	#sign-up{
-		text-align: right;
+		text-align: center;
+		border: 2px solid black;
+	}
+	input {
+  display: block;
+  border: 2px solid blue;
+  border-radius: 4px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 	}
 }
