--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,28 @@ body{
 @media (min-width: 480px){
 	body{
 		margin:0 auto;
+		background-color:#00e7ff;
 	}
+	
 	#sign-up{
 		width:300px;
 		float:right;
 		border: 2px solid black;
 	}
+
 	input {
   display: block;
   border: 2px solid blue;
   border-radius: 4px;
   margin-top: 10px;
   margin-bottom: 10px;
+	}
+
+	h1{
+		font-size: 2em;
+	}
+
+	p{
+		font-size:1.6em;
 	}
 }
