--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body{
   border-radius: 4px;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
+	}
+	label{
+		margin-left:10px;
 	}
 
 	h1{
