--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,13 @@ body{
 
 	#sign-up{
 		width:300px;
-		float:right;
-		border: 2px solid black;
+		/*float:right;
+		border: 2px solid black;*/
+		box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
+		background: #fff;
+		padding: 20px;
+		margin:8% auto 0;
+		text-align: center;
 	}
 
 	input {
@@ -34,5 +39,5 @@ body{
 		font-size:1.6em;
 		text-align:justify;
 		width:970px;
-	}
+	}*/
 }
