--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,11 @@ body{
 
 @media (min-width: 480px){
 	body{
-		margin:0 auto;
+		margin:0 10px;
 		background-color:#00e7ff;
 	}
 
 	#sign-up{
-		margin-left: : 10px;
 		width:300px;
 		/*float:right;
 		border: 2px solid black;*/
@@ -39,6 +38,6 @@ body{
 	p{
 		font-size:1.6em;
 		text-align:justify;
-		width:970px;
+		
 	}*/
 }
