--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,12 @@ body {}
 
   #sign-up {
     width: 300px;
-    /*float:right;
-		border: 2px solid black;*/
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
     background: #fff;
     padding: 20px;
     margin: 8% auto 0;
     text-align: left;
+    float:right;
   }
 
   input {
