--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {}
   #sign-up {
     width: 300px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
-    background: #fff;
+    background: #f5f7fe;
     padding: 20px;
     margin: 8% auto 0;
     text-align: left;
