--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ body {}
     margin-top: -390px;
   }
 
-  .size{
-    width:100%;
+  .size {
+    width: 100%;
   }
 
   input {
@@ -39,9 +39,10 @@ body {}
     text-align: justify;
   }
 
-  #info{
-    width:50%;
+  #info {
+    width: 50%;
   }
+
   #testimonial {
     border: :2px solid #ccc;
     background-color: #eee;
@@ -69,5 +70,11 @@ body {}
     margin-right: 15px;
     font-weight: bold;
     margin-left: 35px;
+  }
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
   }
 }
