--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {}
     margin: 8% auto 0;
     text-align: left;
     float: right;
-    /*margin-right: 40px;*/
     margin-top: -390px;
   }
 
@@ -75,6 +74,9 @@ body {}
   img {
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
   }
 }
