--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {}
     margin-left: 35px;
   }
 
-  img {
+  #sign-up img {
     display: block;
     margin-left: auto;
     margin-right: auto;
