--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,9 @@ body {}
   }
 
   #logo {
-    margin-left: -40px;
-    margin-top: -90px;
+    margin-left: -30px;
+    margin-top: -60px;
+    width: 130px;
+    height:130px;
   }
 }
