fixed style for sign-up

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {}
 
   #sign-up {
     width: 50%;
+    height:480px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
     background: #f5f7fe;
     padding: 20px;
@@ -40,7 +41,7 @@ body {}
 
   h1 {
     font-size: 2em;
-    margin-top: 40px;
+    margin-top: -30px;
   }
 
   p {
