--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {}
 
   #sign-up {
     width: 50%;
-    height:480px;
+    height: 480px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
     background: #f5f7fe;
     padding: 20px;
@@ -87,6 +87,10 @@ body {}
     margin-left: -30px;
     margin-top: -60px;
     width: 130px;
-    height:130px;
+    height: 130px;
+  }
+
+  .size2 {
+    width: 50%;
   }
 }
