--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {}
 
   #logo {
     margin-left: -30px;
-    margin-top: -120px;
+    margin-top: -110px;
     width: 130px;
     height: 130px;
   }
@@ -96,12 +96,13 @@ body {}
   #login {
     margin-left: 650px;
     /*background-color: #00c9de;*/
-    width:600px;
+    margin-top: -10px;
   }
   #rectangle{
     width: 1200px;
-    height: 45px;
+    height: 48px;
     background: #00c9de;
-    margin-top:-50px;
+    margin-top:-60px;
+    margin-left: -50px;
   }
 }
