--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,110 @@
 body {}
 
 @media(min-width:320px) {
+  body {
+    margin: 10px 30px;
+    background-color: #00e7ff;
+  }
 
+  #sign-up {
+    width: 50%;
+    height: 505px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+    background: #f5f7fe;
+    padding: 20px;
+    margin: 8% auto 0;
+    text-align: left;
+    float: right;
+    margin-top: -440px;
+  }
+
+  #sign-up img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+  }
+
+  .size {
+    width: 100%;
+  }
+
+  input {
+    border-radius: 4px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+  }
+
+  h1 {
+    font-size: 2em;
+    margin-top: -20px;
+  }
+
+  p {
+    font-size: 1.6em;
+    text-align: justify;
+  }
+
+  #info {
+    margin-top: 20px;
+    width: 40%;
+  }
+
+  #testimonial {
+    border: :2px solid #ccc;
+    background-color: #eee;
+    border-radius: 5px;
+    padding: 16px;
+    margin: 16px 0;
+  }
+
+  #testimonial::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  #testimonial img {
+    width: 90px;
+    height: 90px;
+    float: left;
+    margin-right: 20px;
+    border-radius: 50%;
+  }
+
+  #testimonial span {
+    font-size: 20px;
+    margin-right: 15px;
+    font-weight: bold;
+    margin-left: 35px;
+  }
+
+  #logo {
+    margin-left: -35px;
+    margin-top: -105px;
+    width: 130px;
+    height: 130px;
+  }
+
+  .size2 {
+    width: 140px;
+  }
+
+  #login {
+    margin-left: 650px;
+    margin-top: -10px;
+  }
+
+  #rectangle {
+    width: 1300px;
+    height: 55px;
+    background: #00c9de;
+    margin-top: -60px;
+    margin-left: -50px;
+  }
 }
 
 @media (min-width: 1200px) {
