--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {}
 
 @media(min-width:786px) {
   body {
-    margin: 10px 30px;
+    margin: 10px 40px;
     background-color: #00e7ff;
   }
 
@@ -15,7 +15,7 @@ body {}
     margin: 8% auto 0;
     text-align: left;
     float: right;
-    margin-top: -560px;
+    margin-top: -430px;
   }
 
   #sign-up img {
@@ -39,18 +39,19 @@ body {}
   }
 
   h1 {
-    font-size: 2em;
+    font-size: 2.3em;
     margin-top: -20px;
   }
 
   p {
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-align: justify;
+    font-family: 'Lato', sans-serif;
   }
 
   #info {
     margin-top: 20px;
-    width: 40%;
+    width: 32%;
   }
 
   #testimonial {
