--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {}
     width: 40%;
   }
 
-  /*#testimonial {
+  #testimonial {
     border:2px solid #ccc;
     background-color: #eee;
     border-radius: 5px;
@@ -66,7 +66,7 @@ body {}
     content: "";
     clear: both;
     display: table;
-  }*/
+  }
 
   #testimonial img {
     width: 90px;
