--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,7 @@ body {}
 
   #sign-up img {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin:0 auto;
     width: 90px;
     height: 90px;
     border-radius: 50%;
