--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,14 @@ body {}
   }
 
   #sign-up {
-    position:absolute;
     width: 40%;
     height: 505px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
     background: #f5f7fe;
     padding: 15px;
-    margin: 8% auto 0;
     text-align: left;
     float: right;
     margin-top: -550px;
-    margin-left:400px;
   }
 
   #sign-up img {
@@ -127,7 +124,8 @@ body {}
     margin: 8% auto 0;
     text-align: left;
     float: right;
-    margin-top: -440px;
+    /*margin-top: -440px;*/
+    margin-left:550px;
   }
 
   #sign-up img {
