--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {}
     padding: 15px;
     text-align: left;
     float: right;
-    margin-top: -550px;
   }
 
   #sign-up img {
@@ -49,6 +48,7 @@ body {}
   }
 
   #info {
+    float:left;
     margin-top: 20px;
     width: 40%;
   }
