--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ p {
   margin-top: -10px;
 }
 
+#login input[type=username], input[type=password]{
+  width:300px;
+}
+
 #rectangle {
   width: 1300px;
   height: 55px;
