--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px 20px;
+  margin: 0 20px;
   background-color: #00e7ff;
 }
 
@@ -80,8 +80,8 @@ p {
 #logo {
   margin-left: -27px;
   margin-top: -105px;
-  width: 130px;
-  height: 130px;
+  width: 90px;
+  height: 90px;
 }
 
 .size2 {
@@ -89,15 +89,13 @@ p {
 }
 
 #login {
-  margin-left: 30px;
+  margin-left: 60px;
   margin-top: -10px;
 }
 
 #login input[type=text], input[type=password]{
   width:100px;
 }
-
-
 
 #rectangle {
   width: 1300px;
