--- a/css/style.css
+++ b/css/style.css
@@ -93,17 +93,18 @@ p {
   margin-top: -10px;
 }
 
-#login input[type=text], input[type=password]{
-  width:200px;
+#login input[type=text],
+input[type=password] {
+  width: 200px;
 }
 
- #rectangle {
-    width: 1300px;
-    height: 55px;
-    background: #00c9de;
-    margin-top: -120px;
-    margin-left: -50px;
- }
+#rectangle {
+  width: 1300px;
+  height: 55px;
+  background: #00c9de;
+  margin-top: -120px;
+  margin-left: -50px;
+}
 
 @media(min-width:768px) {
   body {
