--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ p {
   margin-left: -50px;
 }
 
-@media(min-width:768px) {
+@media only screen and (min-width:768px) {
   body {
     margin: 10px 20px;
     background-color: #00e7ff;
@@ -219,7 +219,7 @@ p {
 }
 
 /*1200*/
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   body {
     margin: 10px 30px;
     background-color: #00e7ff;
